v3-kubernetes/k8s/base/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moyeobab-routes
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /actuator/health
      backendRefs:
        - name: backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /stomp
      backendRefs:
        - name: backend
          port: 8080
